--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,87 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+label{
+  color:cadetblue;
+  margin: 5px;
 }
+
+/* body{
+    background: url("../src/validationformbgimg.jpeg");
+    background-repeat: no-repeat;   
+     background-size: 100% ,100%;
+     height: 100%;
+} */
+/* .parent{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-sec{
+       margin: 20px 10px 0px 10px;
+}
+.form-group1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0px;
+}
+.form-title{
+    text-align: center;
+    margin: 20px 0px 30px 0px;
+    color: teal;
+    -webkit-text-stroke-width :3px;
+    -webkit-text-stroke-color:"black";
+    font-size: 54px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
+}
+.input-control{
+    width: 100%;
+    position: relative;
+    padding: 10px;
+    background-color: transparent;
+    border-radius: 10px;
+    outline: none;
+}
+.label-control {
+position: absolute;
+left: 25px;
+top: 15px;
+z-index: 1;
+}
+
+.addedlabel{
+position: absolute;
+top: -11px;
+transition: all 0.3s ease 0s;
+background-color: #FFFFFF;
+padding: 0px 5px 0px 5px;
+}
+#select-box{
+    padding: 13px;
+}
+.gender-group{
+    width: 50%;
+}
+.submit-btn-box{
+    padding-left: 15px;
+    margin-bottom: 15px;
+    transition: all 0.3s ease 0s;
+    justify-content: center;
+    display: flex; 
+}
+.submit-btn-box:hover{
+transform: translateY(-8px);
+}
+
+.error{
+    color: red;
+}
+.btn{
+     width: 50%;
+     border-radius: 20px;
+} */
